[package]
name = "disco-song-display-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
rspotify = "0.14.0"
rweb = "0.15.0"
rusqlite = { version = "0.26", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
